add jdbc template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.batch.job.enabled=false
+spring.batch.job.enabled=true
 logging.file.max-history=7
 logging.file.name=application.log
 logging.file.path=./
+management.endpoints.web.exposure.exclude=info
+spring.profiles.active=local
+#spring.datasource.url=${APPSETTING_JdbcConnectionString}
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.initialization-mode=always
+spring.datasource.core.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.batch.initialize-schema=always
