--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
         </dependency>-->
 
         <dependency>
+            <groupId>com.macasaet.fernet</groupId>
+            <artifactId>fernet-java8</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-storage-blob</artifactId>
             <version>12.5.0</version>
