--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
         </dependency>-->
 
         <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-security-keyvault-secrets</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-identity</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.macasaet.fernet</groupId>
             <artifactId>fernet-java8</artifactId>
             <version>1.4.2</version>
