cleanup, remove unused files/imports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.batch.job.enabled=true
+spring.batch.job.enabled=false
 logging.file.max-history=3
 logging.file.name=application.log
 logging.file.path=./
