db connection as env var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.profiles.active=local
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.initialization-mode=always
 spring.datasource.core.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.core.url=${CoreJdbcConnectionString}
+#spring.datasource.entity.url=${EntityJdbcConnectionString}
+
 #spring.batch.initialize-schema=always
