--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,9 @@ logging.file.name=application.log
 logging.file.path=./
 management.endpoints.web.exposure.exclude=info
 spring.profiles.active=local
-#spring.datasource.url=${APPSETTING_JdbcConnectionString}
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.initialization-mode=always
 spring.datasource.core.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.core.url=${CoreJdbcConnectionString}
-#spring.datasource.entity.url=${EntityJdbcConnectionString}
+spring.datasource.core.url=${CoreJdbcConnectionString}
+spring.datasource.entity.url=${EntityJdbcConnectionString}
 
 #spring.batch.initialize-schema=always
